# netshapper

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  USER_GUIDE.md  __init__.py  __main__.py  config.py  core.py  discovery.py  fake_server3.py  firewall.py  models.py  pyproject.toml  requirements.txt  run.py  shaper.py  sniffer.py  spoof.py  system.py  ui.py  utils.py
.github/workflows/: pre-release.yml  tests.yml
core/: session.py
examples/: wireless-lab.json
network/: discovery.py
reference/: fake_server3.py  index.html  netshaper3.6.3.3.py  test.c
src/netshaper/: __init__.py  captive_portal.py  config.py  exceptions.py  fake_server3.py  logging_config.py  models.py  portal.py  system.py  utils.py  version.py  wifirecon.py
src/netshaper/capture/: __init__.py  secure.py  sniffer.py
src/netshaper/core/: __init__.py  authorization.py  firewall_manager.py  mitm_manager.py  orchestrator.py  owner.py  plugin.py  plugin_loader.py  portal_manager.py  recovery_manager.py  runtime_contract.py  runtime_protocol.py  session.py  session_plan.py  session_runner.py  state_manager.py
src/netshaper/exploit/: __init__.py  arp_amplification.py  dnssec_suppression.py  hsts_bypass.py
src/netshaper/network/: __init__.py  backends.py  discovery.py  firewall.py  shaper.py  spoofers.py
src/netshaper/network/exploit/: __init__.py  arp_amplification.py  dnssec_suppression.py  hsts_bypass.py
src/netshaper/plugins/: ble_recon.py  wifi_recon.py
src/netshaper/ui/: cli.py
tests/: test_arp_amplification.py  test_backends.py  test_ble_recon.py  test_cli.py  test_config.py  test_discovery.py  test_exploit_imports.py  test_fake_server.py  test_firewall.py  test_global_firewall.py  test_managers.py  test_models.py  test_netns_integration.py  test_orchestrator.py  test_owner.py  test_plugin.py  test_plugin_loader.py  test_portal_manager.py  test_session.py  test_shaper.py  test_sniffer.py  test_spoofers.py  test_state_manager.py  test_system.py  test_utils.py  test_wifi_recon.py  test_wifirecon.py  test_workflows.py
