[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netshaper"
dynamic = ["version"]
description = "A safety-first, authorized network shaping and diagnostics toolkit for controlled lab testing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "NetShaper Contributors"}]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Security",
]
dependencies = [
  "psutil>=5.9",
  "scapy>=2.5",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7.10",
  "build>=1.2",
  "coverage>=7.6",
  "mypy>=1.13",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
netshaper = "netshaper.ui.cli:main"
netshaper-fake-server = "netshaper.fake_server3:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["netshaper", "netshaper.*"]

[tool.setuptools.dynamic]
version = {attr = "netshaper.version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["reference"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E402", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
files = [
  "src/netshaper/core/state_manager.py",
  "src/netshaper/models.py",
  "src/netshaper/network/backends.py",
]

[tool.bandit]
exclude_dirs = ["tests", "reference"]
skips = ["B404", "B603", "B607"]

[tool.coverage.run]
source = ["src/netshaper"]

[tool.coverage.report]
fail_under = 62
show_missing = true
