[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "netshaper"
dynamic = ["version"]
description = "A safety-first, authorized network shaping and diagnostics toolkit for controlled lab testing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "NetShaper Contributors"}]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "Topic :: Security",
]
dependencies = [
  "psutil>=5.9",
  "scapy>=2.5",
]

[project.optional-dependencies]
ble = [
  "bleak>=0.22",
]
dev = [
  "bandit>=1.7.10",
  "build>=1.2",
  "coverage>=7.6",
  "msgpack>=1.2.1",
  "pytest-cov>=4.0",
  "mypy>=1.13",
  "pip-audit>=2.7",
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
netshaper = "netshaper.ui.cli:main"
netshaper-fake-server = "netshaper.fake_server3:main"
netshaper-captive-portal = "netshaper.captive_portal:main"

[project.entry-points."netshaper.plugins"]
wifi-recon = "netshaper.plugins.wifi_recon:WifiReconPlugin"
ble-recon = "netshaper.plugins.ble_recon:BleReconPlugin"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["netshaper", "netshaper.*"]

[tool.setuptools.dynamic]
version = {attr = "netshaper.version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["reference"]

[tool.ruff.lint]
select = ["E", "F", "W", "C", "B"]
ignore = ["E402", "E501", "C901"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
files = [
  "src/netshaper/",
]
exclude = ["src/netshaper/fake_server3.py"]

[[tool.mypy.overrides]]
module = [
  "netshaper.captive_portal",
  "netshaper.capture.*",
  "netshaper.config",
  "netshaper.core.mitm_manager",
  "netshaper.core.orchestrator",
  "netshaper.core.session",
  "netshaper.core.state_manager",
  "netshaper.network.*",
  "netshaper.system",
  "netshaper.ui.*",
  "netshaper.utils",
]
ignore_errors = true

# Core security-sensitive modules require stricter checking
[[tool.mypy.overrides]]
module = [
  "netshaper.core.authorization",
  "netshaper.core.firewall_manager",
  "netshaper.core.recovery_manager",
]
strict = true

[tool.bandit]
exclude_dirs = ["tests", "reference"]
skips = []
# Note: B603/B607 (subprocess without shell=True) are handled with localized
# # nosec B603 — intentional: ... annotations at each specific call site
# to keep the exclusion visible and reviewable without disabling globally

[tool.coverage.run]
source = ["src/netshaper"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
]
